--- a/theme/partials/section_markup.hbs
+++ b/theme/partials/section_markup.hbs
@@ -4,6 +4,6 @@
 	</div>
 
 	<div class="section-content">
-		<pre class="prettyprint lang-html"><code data-language="html">{{markup}}</code></pre>
+		<pre class="prettyprint lang-html"><code data-language="html">{{markup reference}}</code></pre>
 	</div>
 </div>
