--- a/theme/partials/section_modifiers.hbs
+++ b/theme/partials/section_modifiers.hbs
@@ -12,7 +12,7 @@
 		</div>
 
 		<div class="section-content">
-			<iframe src="{{exampleUrl ../reference className}}" scrolling="no"></iframe>
+			<iframe src="{{exampleUrl ../reference className}}#iframe" scrolling="no"></iframe>
 		</div>
 	</div>
 {{/each}}
