--- a/theme/src/less/base.less
+++ b/theme/src/less/base.less
@@ -62,13 +62,21 @@ iframe {
 	width: 100%;
 
 	border: none;
-	// background-color: #ddd;
 
 	transition: width 1s ease;
 }
 
 pre {
-	white-space: pre-line;
+	padding: 50px;
+
+	border-radius: 4px;
+
+	background-color: #222;
+
+	color: #ddd;
+
+	tab-size: 0;
+	white-space: pre;
 }
 
 code {
