--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -14,7 +14,7 @@
 	<header class="header">
 		<div class="header-content">
 			<a href="/" class="brand">
-				<img src="/assets/logo.svg">
+				<img src="{{option "logo"}}">
 			</a>
 
 			{{#ifDepth 2}}
