--- a/src/templates/demo.hbs
+++ b/src/templates/demo.hbs
@@ -37,7 +37,9 @@
 		}
 	</script>
 
-	{{{content}}}
+	<div data-iframe-height="true">
+		{{{content}}}
+	</div>
 
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/0.19.20/system.js"></script>
 	<script type="text/javascript" src="/{{option "public"}}/main.js"></script>
