--- a/src/templates/demo.hbs
+++ b/src/templates/demo.hbs
@@ -37,7 +37,11 @@
 		}
 	</script>
 
-	<div data-iframe-height="true">
+	<div
+		data-iframe-height="true"
+		data-background="{{background}}"
+		data-height="{{height}}"
+	>
 		{{{content}}}
 	</div>
 
