--- a/src/templates/demo.hbs
+++ b/src/templates/demo.hbs
@@ -16,32 +16,28 @@
 	{{/if}}
 
 	<script type="text/javascript">
-		if (window.location.hash === '#iframe') {
-			var css   = 'html, body { padding: 0; margin: 0; {{height}} {{background}} }';
-			var head  = document.head || document.getElementsByTagName('head')[0];
-			var style = document.createElement('style');
+		// if (window.location.hash === '#iframe') {
+		// 	var css   = 'html, body { padding: 0; margin: 0; {{height}} {{background}} }';
+		// 	var head  = document.head || document.getElementsByTagName('head')[0];
+		// 	var style = document.createElement('style');
 
-			style.type = 'text/css';
+		// 	style.type = 'text/css';
 
-			if (style.styleSheet) {
-				style.styleSheet.cssText = css;
-			} else {
-				style.appendChild(document.createTextNode(css));
-			}
+		// 	if (style.styleSheet) {
+		// 		style.styleSheet.cssText = css;
+		// 	} else {
+		// 		style.appendChild(document.createTextNode(css));
+		// 	}
 
-			head.appendChild(style);
+		// 	head.appendChild(style);
 
-			// Iframe font-size quick fix
-			document.body.style.fontSize = "10px";
-			setTimeout(function() { document.body.removeAttribute('style'); }, 100);
-		}
+		// 	// Iframe font-size quick fix
+		// 	document.body.style.fontSize = "10px";
+		// 	setTimeout(function() { document.body.removeAttribute('style'); }, 100);
+		// }
 	</script>
 
-	<div
-		data-iframe-height="true"
-		data-background="{{background}}"
-		data-height="{{height}}"
-	>
+	<div data-iframe-height="true">
 		{{{content}}}
 	</div>
 
