--- a/src/themes/default/partials/section_modifiers.hbs
+++ b/src/themes/default/partials/section_modifiers.hbs
@@ -13,7 +13,12 @@
 			</div>
 
 			<div class="section-content">
-				<iframe src="{{url reference}}#iframe" scrolling="no"></iframe>
+				{{> partial.iframe
+					src=(url reference)
+					transparent=../custom.transparent
+					height=../custom.iframeheight
+					padding=../custom.iframepadding
+				}}
 			</div>
 		</div>
 	{{/each}}
@@ -33,7 +38,12 @@
 				</div>
 
 				<div class="section-content">
-					<iframe src="{{url reference}}#iframe" scrolling="no"></iframe>
+					{{> partial.iframe
+						src=(url reference)
+						transparent=../../custom.transparent
+						height=../../custom.iframeheight
+						padding=../../custom.iframepadding
+					}}
 				</div>
 			</div>
 		{{/each}}
